# inference-compute-hack

./: .gitignore  .mcp.json  CONTRACTS.md  DEMO.md  EVAL_PLAN.md  FREEZE.md  METRICS.md  PLAN.md  README.md  REFINEMENTS.md  RISKS.md  SCHEDULE.md
backend/: __init__.py  agent.py  batch_accumulator.py  beam.py  cache.py  classifier.py  clause.py  knowledge.py  main.py  mcp_server.py  requirements.txt  schemas.py  score_store.py  select.py  state.py  streaming.py
baseline/: rag.py
data/: __init__.py  browsecomp_loader.py  chunker.py  schema.py
docs/: README.md  agent-experiment-summary-format.md  extension-03-agent-loop-rl.md  optimization-results-ledger.md
environments/extension3_agent_loop/: README.md  pyproject.toml
environments/extension3_agent_loop/.prime/: .env-metadata.json
environments/extension3_agent_loop/extension3_agent_loop/: __init__.py  extension3_agent_loop.py  retrieval_data.py
eval/: SLIDE.md  __init__.py  agent_loop.py  agent_loop_modal_checkpoints.py  agent_loop_prime.py  bench.py  config.py  cut_line.py  experiment_runner.py  experiment_runner_prime.py  prime_budget_monitor.py  prime_final_matrix.py  rag_compare.py  refine_replay.py  rehearsal.py  requirements.txt  run_all_experiments.py  standard_benchmark.py  trace.py  upload_weave_results.py  weave_ops.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
inference/: __init__.py  config.py  mock_scorer.py  modal_app.py  modal_client.py  requirements-gpu.txt  scorer.py  serve.sh  vllm_scorer.py
performance/: README.md  theory.py
scripts/: mcp_flashgrep.sh  (+2 more)
(+204 files in other folders)
